Finalização do HTML e CSS

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div>
             <input type="checkbox" id="generos-musicais">
-            <label for="radio">Certanejo</label>
+            <label for="radio">Sertanejo</label>
         </div>
 
         <div>
